macros/entity_macros/tests/ui/attribute/simple_ent/unsupported-tuple-struct.stderr
error: Unsupported shape `tuple`
 --> $DIR/unsupported-tuple-struct.rs:3:1
  |
3 | #[simple_ent]
  | ^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
