macros/entity_macros/tests/ui/attribute/simple_ent/unsupported-tuple-struct.rs
use entity::{simple_ent, Ent};

#[simple_ent]
#[derive(Clone, Ent)]
pub struct SimpleEnt(#[ent(field)] String, #[ent(field)] u32);

fn main() {}
